syntax = "proto3";

package locale;

import "google/protobuf/empty.proto";

service LocaleService {
  rpc SetLocale (SetLocaleRequest) returns (google.protobuf.Empty) {};
  rpc GetLocale (google.protobuf.Empty) returns (GetLocaleResponse) {};
}

message SetLocaleRequest {
  string locale = 1;
}

message GetLocaleResponse {
  string locale = 1;
}
