syntax = "proto3";

package privacy;

import "google/protobuf/empty.proto";

service PrivacyService {
    rpc GetLocationServices(google.protobuf.Empty) returns (GetLocationServicesResponse) {}
    rpc EnableLocationServices(google.protobuf.Empty) returns (google.protobuf.Empty) {}
    rpc DisableLocationServices(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message GetLocationServicesResponse {
    bool enabled = 1;
}
